<resources>
    <string name="app_name">TimeLine2.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Заметки</string>
    <string name="calendar">Календарь</string>
    <string name="settings">Настройки</string>

    <string name="settings_app_theme">Тема приложения</string>
    <string name="app_theme">Темная тема</string>
    <string name="settings_app_language">Язык приложения</string>
    <string name="app_language">Русский</string>

    <string name="support_us">Поддержите нас</string>

    <string name="search_by_title">Поиск по заголовку</string>
    <string name="sort_by_date">По дате</string>
    <string name="change_note">Изменение заметки</string>
    <string name="create_note">Создание заметки</string>
    <string name="create_event">Создание задачи</string>
    <string name="change_event">Изменение задачи</string>
    <string name="title">Заголовок</string>
    <string name="text">Текст</string>
    <string name="description">Описание</string>
    <string name="save">Сохранить</string>


    <string name="positive_button">Понятно</string>
    <string name="negative_button">Не согласен</string>
    <string name="dialog_title">Язык приложения</string>
    <string name="dialog_description">К сожалению, выбор языка недоступен. Приложение только для русских</string>
    <string name="event_in_the_past">Установить событие на прошлое - нельзя, дата переведена на один день вперёд</string>
    <string name="no_notes">Заметок нет</string>
    <string name="no_events">Событий нет</string>
    
</resources>