<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <!--Заголовок-->
    <TextView
        android:id="@+id/appbar_settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/nunito_sans_bold"

        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/theme_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/gray_175"
        android:insetTop="0dp"

        android:insetBottom="0dp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_settings_textview" />

   <Button
       android:id="@+id/language_button"
       style="@style/Widget.Material3.Button"
       android:layout_width="0dp"
       android:layout_height="86dp"
       android:layout_marginStart="24dp"
       android:layout_marginTop="8dp"
       android:layout_marginEnd="24dp"
       android:backgroundTint="@color/gray_175"
       android:insetTop="0dp"

       android:insetBottom="0dp"
       app:cornerRadius="16dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/theme_button" />

    <Button
        android:id="@+id/support_us_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/gray_175"
        android:insetTop="0dp"

        android:insetBottom="0dp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/settings_app_theme_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_sans_bold"

        android:text="@string/settings_app_theme"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/theme_button"
        app:layout_constraintTop_toTopOf="@+id/theme_button" />

    <TextView
        android:id="@+id/app_theme_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_sans_regular"

        android:text="@string/app_theme"
        android:textColor="@color/gray_900"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/theme_button"
        app:layout_constraintStart_toStartOf="@+id/theme_button"
        app:layout_constraintTop_toBottomOf="@+id/settings_app_theme_textview"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/settings_app_language_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_sans_bold"

        android:text="@string/settings_app_language"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/language_button"
        app:layout_constraintTop_toTopOf="@+id/language_button" />

    <TextView
        android:id="@+id/app_language_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_sans_regular"

        android:text="@string/app_language"
        android:textColor="@color/gray_900"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/language_button"
        app:layout_constraintStart_toStartOf="@+id/language_button"
        app:layout_constraintTop_toBottomOf="@+id/settings_app_language_textview"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/support_us_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/nunito_sans_bold"

        android:text="@string/support_us"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/support_us_button"
        app:layout_constraintStart_toStartOf="@+id/support_us_button"
        app:layout_constraintTop_toTopOf="@+id/support_us_button" />

    <View
        android:id="@+id/view"
        android:layout_width="6dp"
        android:layout_height="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/support_us_button"
        app:layout_constraintEnd_toEndOf="@+id/support_us_button"
        app:layout_constraintTop_toTopOf="@+id/support_us_button" />

</androidx.constraintlayout.widget.ConstraintLayout>